fixed minor css spacing

--- a/react-app/src/components/EventsList/EventList.css
+++ b/react-app/src/components/EventsList/EventList.css
@@ -33,3 +33,9 @@ a{
     width: 100%;
     object-fit: cover;
 }
+
+.host-event-type-cont{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
