--- a/react-app/src/components/SingleEvent/singleEvent.css
+++ b/react-app/src/components/SingleEvent/singleEvent.css
@@ -1,10 +1,11 @@
 .event-page{
     flex: 75%;
     gap: 5px;
+    padding-right: 25%;
 }
 
 .event-image{
-    width: 75%;
+    width: 100%;
     height: 400px;
 }
 
@@ -16,6 +17,10 @@
 
 .event-title{
     font-size: 30px;
+}
+
+.description-cont{
+    padding-top: 20px;
 }
 
 .product-list{
